@@ -10,3 +10,5 @@ OutputQuantity=8
 [Audio]
 AlsaDevice=plughw:Axia
 PeriodQuantity=4
+InputBusXfers=No
+OutputBusXfers=Yes
